# AdventOfCode

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
2021/: CMakeLists.txt
2021/inc/: CanvasMath.hpp  day15.h  day16.h  day17.h  day18.h  input.h
2021/src/: CMakeLists.txt  cmakelists.txt  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day21.cpp  day22.cpp  main.cpp
inc/: BigUInt.h  Dijkstras.h  Grid.h  Solution.h  SolutionFactory.h
src/: CMakeLists.txt  SolutionFactory.h  Solutions.h  main.cpp  pch.h
src/2021/: CMakeLists.txt  day16.h  day17.cpp  day19.h  day20.cpp  day20.h  day20.txt  day20test.txt  day21.h  day22.cpp  day22.h  main.cpp
src/2022/: CMakeLists.txt  Day1.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Day8.cpp  Day9.cpp  Solution.h  main.cpp  pch.h
src/2023/: CMakeLists.txt  Day1.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Day8.cpp  Day9.cpp  main.cpp  pch.h
src/2024/: CMakeLists.txt  Day1.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Day8.cpp  Day9.cpp  main.cpp  pch.h
src/aocrunner/: CMakeLists.txt  main.cpp  pch.h
